uploading flask api app

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,16 +2,161 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg2-binary\n",
+      "  Downloading psycopg2_binary-2.9.6-cp39-cp39-win_amd64.whl (1.2 MB)\n",
+      "     ---------------------------------------- 1.2/1.2 MB 10.6 MB/s eta 0:00:00\n",
+      "Installing collected packages: psycopg2-binary\n",
+      "Successfully installed psycopg2-binary-2.9.6\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "# pip install psycopg2-binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import psycopg2 as pg\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from flask import Flask, jsonify, render_template\n",
+    "from config import pw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_string = f\"postgres:{pw}@localhost:5433/Austin_Housing_Market\"\n",
+    "engine = create_engine(f'postgresql://{connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = automap_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.prepare(engine, reflect=True)\n",
+    "\n",
+    "annual_sales = Base.classes.annual_sales\n",
+    "monthly_sales = Base.classes.monthly_sales\n",
+    "price_distribution = Base.classes.price_distribution\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = Session(engine)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'session': <sqlalchemy.orm.session.Session at 0x122cccc5d00>,\n",
+       " '_propagate_attrs': immutabledict({'compile_state_plugin': 'orm', 'plugin_subject': <Mapper at 0x122cccfaa30; price_distribution>}),\n",
+       " '_raw_columns': [Column('year_2011', DOUBLE_PRECISION(precision=53), table=<price_distribution>, nullable=False)]}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.query(price_distribution.year_2011).__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<sqlalchemy.ext.automap.annual_sales at 0x122ccd205b0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20520>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20640>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd206a0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20700>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20760>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd207c0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20820>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20880>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd208e0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20940>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd209a0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20a00>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20a60>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20ac0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20b20>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20b80>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20be0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20c40>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20ca0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20d00>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20d60>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20dc0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20e20>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20e80>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20ee0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20f40>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20fa0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd20fd0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd2d0a0>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd2d100>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd2d160>,\n",
+       " <sqlalchemy.ext.automap.annual_sales at 0x122ccd2d1c0>]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.query(annual_sales).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +180,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>Dollar Volume</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Median Price</th>\n",
-       "      <th>Total Listings</th>\n",
-       "      <th>Months Inventory</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>dollar_volume</th>\n",
+       "      <th>average_price</th>\n",
+       "      <th>median_price</th>\n",
+       "      <th>total_listings</th>\n",
+       "      <th>months_inventory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -100,14 +245,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Date  Sales  Dollar Volume  Average Price  Median Price  Total Listings  \\\n",
+       "   year  sales  dollar_volume  average_price  median_price  total_listings  \\\n",
        "0  1990   7068      579669083          82013         72252            4412   \n",
        "1  1991   7485      661674435          88400         75865            3552   \n",
        "2  1992   8389      832936284          99289         82929            3020   \n",
        "3  1993   9784     1076687995         110046         90949            2860   \n",
        "4  1994  10418     1207051547         115862         95158            3645   \n",
        "\n",
-       "   Months Inventory  \n",
+       "   months_inventory  \n",
        "0               6.5  \n",
        "1               4.6  \n",
        "2               3.6  \n",
@@ -115,7 +260,7 @@
        "4               3.9  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,12 +269,44 @@
     "# pull in annual home sales excel file and create dataframe\n",
     "annual_data_df = pd.read_excel('Resources/annual_home_sales.xlsx')\n",
     "\n",
-    "annual_data_df.head()"
+    "annual_data_df.head()\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33 entries, 0 to 32\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   year              33 non-null     int64  \n",
+      " 1   sales             33 non-null     int64  \n",
+      " 2   dollar_volume     33 non-null     int64  \n",
+      " 3   average_price     33 non-null     int64  \n",
+      " 4   median_price      33 non-null     int64  \n",
+      " 5   total_listings    33 non-null     int64  \n",
+      " 6   months_inventory  33 non-null     float64\n",
+      "dtypes: float64(1), int64(6)\n",
+      "memory usage: 1.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "annual_data_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +330,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>Dollar Volume</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Median Price</th>\n",
-       "      <th>Total Listings</th>\n",
-       "      <th>Months Inventory</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>dollar_volume</th>\n",
+       "      <th>average_price</th>\n",
+       "      <th>median_price</th>\n",
+       "      <th>total_listings</th>\n",
+       "      <th>months_inventory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -218,14 +395,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        Date  Sales  Dollar Volume  Average Price  Median Price  \\\n",
+       "        date  sales  dollar_volume  average_price  median_price  \\\n",
        "0 1990-01-01    558       46937286          84117         71000   \n",
        "1 1990-02-01    444       37056240          83460         71199   \n",
        "2 1990-03-01    431       34722653          80563         72497   \n",
        "3 1990-04-01    569       34616822          60838         71998   \n",
        "4 1990-05-01    549       44907102          81798         73694   \n",
        "\n",
-       "   Total Listings  Months Inventory  \n",
+       "   total_listings  months_inventory  \n",
        "0            4391               7.9  \n",
        "1            4343               8.7  \n",
        "2            4459               9.3  \n",
@@ -233,7 +410,7 @@
        "4            4731               9.3  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +447,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Price Distribution</th>\n",
+       "      <th>price_distribution</th>\n",
        "      <th>2011</th>\n",
        "      <th>2012</th>\n",
        "      <th>2013</th>\n",
@@ -371,7 +548,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Price Distribution  2011  2012  2013  2014  2015  2016  2017  2018  2019  \\\n",
+       "    price_distribution  2011  2012  2013  2014  2015  2016  2017  2018  2019  \\\n",
        "0         $0 - $69,999   4.5   2.9   1.7   0.9   0.6   0.4   0.2   0.1   0.1   \n",
        "1    $70,000 - $99,999   6.5   5.3   3.3   2.0   1.1   0.8   0.5   0.3   0.2   \n",
        "2  $100,000 - $149,999  21.6  19.5  16.0  11.0   6.5   3.7   2.5   1.7   1.2   \n",
@@ -386,7 +563,7 @@
        "4  14.7   3.8   1.1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
