--- a/main.ipynb
+++ b/main.ipynb
@@ -36,6 +36,8 @@
     "from sqlalchemy import create_engine, func\n",
     "from sqlalchemy.orm import sessionmaker\n",
     "from flask import Flask, jsonify, render_template\n",
+    "## generation personal config file as config.py\n",
+    "## variable has to be set to \"pw\"\n",
     "from config import pw"
    ]
   },
